@@ -20,6 +20,9 @@ def help(exitcode=0):
     print("             the default repository.\n")
     print("  default    Set the current repository as default repository.")
     print("")
+    print("  config key value  Change configuration.")
+    print("             e.g. config viewer /usr/bin/okular")
+    print("")
     print("List papers")
     print("  list       List all tracked papers in the current repository.\n")
     print("  search <regex>")
