@@ -1,4 +1,5 @@
 0.0.17 (in progress)
+- feature: call "papr config viewer <value>" to set the default viewer
 
 0.0.16
 - feature: shortcut 'l' to show statistics about tags
